bitfields/tests/compile_error_cases/errors/arrays/array_length_too_large.rs
use bitfields::bitfield;

#[bitfield([u8; 4294967296])]
pub struct Bitfield {
    a: u8,
}

fn main() {}

