bitfields/tests/compile_error_cases/errors/arrays/array_length_too_large.stderr
error: The bitfield array length is currently capped at 4,294,967,295, please reduce the array length.
 --> tests/compile_error_cases/errors/arrays/array_length_too_large.rs:3:1
  |
3 | #[bitfield([u8; 4294967296])]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
